# mise-tui

./: .gitignore  Cargo.toml
config/: default.toml
src/: action.rs  app.rs  component.rs  config.rs  editor.rs  event.rs  input.rs  layout.rs  lib.rs  main.rs  profile.rs  registry.rs  theme.rs
src/data/: command.rs  external.rs  hyprland.rs  mod.rs  system.rs  types.rs
src/widgets/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  packages.rs  placeholder.rs  processes.rs  services.rs  temps.rs  util.rs  workspaces.rs
tests/: integration.rs  sysinfo_integration.rs
