[package]
name = "mise-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
sysinfo = "0.34"
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
notify = "7"
notify-debouncer-mini = "0.5"
nix = { version = "0.29", features = ["signal"] }
